fix item name overflow

--- a/coreui/src/assets/scss/product-card.scss
+++ b/coreui/src/assets/scss/product-card.scss
@@ -30,7 +30,9 @@
         h6{
             margin:0;
             padding:0;
+            white-space: nowrap;
         }
+
         small{
             margin:0;
             padding:0;
@@ -117,6 +119,44 @@
                 transform: translateY(-100%);
               }
           }
+        }
+      }
+
+      .bottom:hover {
+        .scroll-text {
+            /* animation properties */
+            -moz-transform: translateX(100%);
+            -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+
+            -moz-animation: my-animation 10s linear infinite;
+            -webkit-animation: my-animation 10s linear infinite;
+            animation: my-animation 10s linear infinite;
+          }
+
+          /* for Firefox */
+          @-moz-keyframes my-animation {
+            from { -moz-transform: translateX(100%); }
+            to { -moz-transform: translateX(-100%); }
+          }
+
+          /* for Chrome */
+          @-webkit-keyframes my-animation {
+            from { -webkit-transform: translateX(100%); }
+            to { -webkit-transform: translateX(-100%); }
+          }
+
+          @keyframes my-animation {
+            from {
+              -moz-transform: translateX(100%);
+              -webkit-transform: translateX(100%);
+              transform: translateX(100%);
+            }
+            to {
+              -moz-transform: translateX(-100%);
+              -webkit-transform: translateX(-100%);
+              transform: translateX(-100%);
+            }
         }
       }
     }
